<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.knbhatt.singlescreenapp.MainActivity"
    android:background="@color/backgroundcolor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:background="@drawable/travel">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="@dimen/padding"
            android:text="@string/title"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorname"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:paddingLeft="@dimen/padding"
            android:src="@drawable/ic_settings_phone_black_24dp" />
        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:paddingLeft="@dimen/padding"
            android:text="@string/phonenumber"
            android:textSize="@dimen/text_size"
            android:textColorLink="@color/colorname"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/padding"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:paddingLeft="@dimen/padding"
            android:src="@drawable/ic_public_black_24dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingLeft="@dimen/padding"
            android:text="@string/website"
            android:textSize="@dimen/text_size"
            android:textColorLink="@color/colorname"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:paddingLeft="@dimen/padding"
            android:src="@drawable/ic_place_black_24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="map"
            android:paddingLeft="@dimen/padding"
            android:text="@string/location"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorname"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/padding"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:paddingLeft="@dimen/padding"
            android:src="@drawable/ic_mail_outline_black_24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:paddingLeft="@dimen/padding"
            android:text="@string/mail"
            android:textSize="@dimen/text_size"
            android:textColorLink="@color/colorname"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:paddingLeft="@dimen/padding"
            android:src="@drawable/ic_access_time_black_24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:paddingLeft="@dimen/padding"
            android:textColor="@color/colorname"
            android:text="@string/time"
            android:textSize="@dimen/text_size"
            />
    </LinearLayout>
</LinearLayout>


